:copyright:  Thibault Osmont

--- a/Subscribe_premium/index.html
+++ b/Subscribe_premium/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="offer">
 	<head>
-		<title>Angular</title>
+		<title>Thibault Osmont - Angular Translate</title>
 
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
